add the GP number to summary

--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -791,6 +791,417 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_29179/2286085049.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  target_population.loc[:,\"observed_distance\"] = target_population.loc[:,\"distance\"] * target_population.loc[:,\"estimated_str\"]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lon</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>Z</th>\n",
+       "      <th>parlimen</th>\n",
+       "      <th>code_parlimen</th>\n",
+       "      <th>state</th>\n",
+       "      <th>district</th>\n",
+       "      <th>code_state</th>\n",
+       "      <th>code_district</th>\n",
+       "      <th>code_state_district</th>\n",
+       "      <th>parlimen_z</th>\n",
+       "      <th>str_count</th>\n",
+       "      <th>estimated_str</th>\n",
+       "      <th>id</th>\n",
+       "      <th>clinic_name</th>\n",
+       "      <th>address</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>observed_distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17054</th>\n",
+       "      <td>116.127916</td>\n",
+       "      <td>6.128750</td>\n",
+       "      <td>459.608429</td>\n",
+       "      <td>P.171 Sepanggar</td>\n",
+       "      <td>P.171</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kota Kinabalu</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12_7</td>\n",
+       "      <td>492728.552631</td>\n",
+       "      <td>47255</td>\n",
+       "      <td>44.078623</td>\n",
+       "      <td>940</td>\n",
+       "      <td>MEDISINAR KLINIK &amp; SURGERI</td>\n",
+       "      <td>LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...</td>\n",
+       "      <td>6.094047</td>\n",
+       "      <td>116.158303</td>\n",
+       "      <td>5.116395</td>\n",
+       "      <td>225.523666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17368</th>\n",
+       "      <td>116.094583</td>\n",
+       "      <td>6.120417</td>\n",
+       "      <td>195.142136</td>\n",
+       "      <td>P.171 Sepanggar</td>\n",
+       "      <td>P.171</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kota Kinabalu</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12_7</td>\n",
+       "      <td>492728.552631</td>\n",
+       "      <td>47255</td>\n",
+       "      <td>18.715054</td>\n",
+       "      <td>940</td>\n",
+       "      <td>MEDISINAR KLINIK &amp; SURGERI</td>\n",
+       "      <td>LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...</td>\n",
+       "      <td>6.094047</td>\n",
+       "      <td>116.158303</td>\n",
+       "      <td>7.630956</td>\n",
+       "      <td>142.813753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17369</th>\n",
+       "      <td>116.119583</td>\n",
+       "      <td>6.120417</td>\n",
+       "      <td>1060.403320</td>\n",
+       "      <td>P.171 Sepanggar</td>\n",
+       "      <td>P.171</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kota Kinabalu</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12_7</td>\n",
+       "      <td>492728.552631</td>\n",
+       "      <td>47255</td>\n",
+       "      <td>101.697697</td>\n",
+       "      <td>940</td>\n",
+       "      <td>MEDISINAR KLINIK &amp; SURGERI</td>\n",
+       "      <td>LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...</td>\n",
+       "      <td>6.094047</td>\n",
+       "      <td>116.158303</td>\n",
+       "      <td>5.188919</td>\n",
+       "      <td>527.701119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17370</th>\n",
+       "      <td>116.127916</td>\n",
+       "      <td>6.120417</td>\n",
+       "      <td>281.046906</td>\n",
+       "      <td>P.171 Sepanggar</td>\n",
+       "      <td>P.171</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kota Kinabalu</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12_7</td>\n",
+       "      <td>492728.552631</td>\n",
+       "      <td>47255</td>\n",
+       "      <td>26.953728</td>\n",
+       "      <td>940</td>\n",
+       "      <td>MEDISINAR KLINIK &amp; SURGERI</td>\n",
+       "      <td>LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...</td>\n",
+       "      <td>6.094047</td>\n",
+       "      <td>116.158303</td>\n",
+       "      <td>4.459260</td>\n",
+       "      <td>120.193690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17690</th>\n",
+       "      <td>116.094583</td>\n",
+       "      <td>6.112084</td>\n",
+       "      <td>217.092148</td>\n",
+       "      <td>P.171 Sepanggar</td>\n",
+       "      <td>P.171</td>\n",
+       "      <td>Sabah</td>\n",
+       "      <td>Kota Kinabalu</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12_7</td>\n",
+       "      <td>492728.552631</td>\n",
+       "      <td>47255</td>\n",
+       "      <td>20.820164</td>\n",
+       "      <td>940</td>\n",
+       "      <td>MEDISINAR KLINIK &amp; SURGERI</td>\n",
+       "      <td>LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...</td>\n",
+       "      <td>6.094047</td>\n",
+       "      <td>116.158303</td>\n",
+       "      <td>7.325084</td>\n",
+       "      <td>152.509445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381944</th>\n",
+       "      <td>110.261250</td>\n",
+       "      <td>1.070417</td>\n",
+       "      <td>16.221607</td>\n",
+       "      <td>P.198 Puncak Borneo</td>\n",
+       "      <td>P.198</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Kuching</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13_1</td>\n",
+       "      <td>140191.788817</td>\n",
+       "      <td>16680</td>\n",
+       "      <td>1.930045</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>33.772913</td>\n",
+       "      <td>65.183229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381945</th>\n",
+       "      <td>110.269583</td>\n",
+       "      <td>1.070417</td>\n",
+       "      <td>15.162821</td>\n",
+       "      <td>P.198 Puncak Borneo</td>\n",
+       "      <td>P.198</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Kuching</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13_1</td>\n",
+       "      <td>140191.788817</td>\n",
+       "      <td>16680</td>\n",
+       "      <td>1.804070</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>33.335879</td>\n",
+       "      <td>60.140271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381946</th>\n",
+       "      <td>110.277916</td>\n",
+       "      <td>1.070417</td>\n",
+       "      <td>17.784443</td>\n",
+       "      <td>P.198 Puncak Borneo</td>\n",
+       "      <td>P.198</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Kuching</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13_1</td>\n",
+       "      <td>140191.788817</td>\n",
+       "      <td>16680</td>\n",
+       "      <td>2.115991</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>32.919120</td>\n",
+       "      <td>69.656549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382128</th>\n",
+       "      <td>110.261250</td>\n",
+       "      <td>1.062084</td>\n",
+       "      <td>16.893658</td>\n",
+       "      <td>P.198 Puncak Borneo</td>\n",
+       "      <td>P.198</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Kuching</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13_1</td>\n",
+       "      <td>140191.788817</td>\n",
+       "      <td>16680</td>\n",
+       "      <td>2.010005</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>34.587486</td>\n",
+       "      <td>69.521023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382129</th>\n",
+       "      <td>110.269583</td>\n",
+       "      <td>1.062084</td>\n",
+       "      <td>15.474317</td>\n",
+       "      <td>P.198 Puncak Borneo</td>\n",
+       "      <td>P.198</td>\n",
+       "      <td>Sarawak</td>\n",
+       "      <td>Kuching</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13_1</td>\n",
+       "      <td>140191.788817</td>\n",
+       "      <td>16680</td>\n",
+       "      <td>1.841132</td>\n",
+       "      <td>911</td>\n",
+       "      <td>17TH MILES FAMILY CLINIC</td>\n",
+       "      <td>GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...</td>\n",
+       "      <td>1.336466</td>\n",
+       "      <td>110.407803</td>\n",
+       "      <td>34.160873</td>\n",
+       "      <td>62.894680</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8510 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               lon       lat            Z             parlimen code_parlimen  \\\n",
+       "17054   116.127916  6.128750   459.608429      P.171 Sepanggar         P.171   \n",
+       "17368   116.094583  6.120417   195.142136      P.171 Sepanggar         P.171   \n",
+       "17369   116.119583  6.120417  1060.403320      P.171 Sepanggar         P.171   \n",
+       "17370   116.127916  6.120417   281.046906      P.171 Sepanggar         P.171   \n",
+       "17690   116.094583  6.112084   217.092148      P.171 Sepanggar         P.171   \n",
+       "...            ...       ...          ...                  ...           ...   \n",
+       "381944  110.261250  1.070417    16.221607  P.198 Puncak Borneo         P.198   \n",
+       "381945  110.269583  1.070417    15.162821  P.198 Puncak Borneo         P.198   \n",
+       "381946  110.277916  1.070417    17.784443  P.198 Puncak Borneo         P.198   \n",
+       "382128  110.261250  1.062084    16.893658  P.198 Puncak Borneo         P.198   \n",
+       "382129  110.269583  1.062084    15.474317  P.198 Puncak Borneo         P.198   \n",
+       "\n",
+       "          state       district  code_state  code_district code_state_district  \\\n",
+       "17054     Sabah  Kota Kinabalu          12              7                12_7   \n",
+       "17368     Sabah  Kota Kinabalu          12              7                12_7   \n",
+       "17369     Sabah  Kota Kinabalu          12              7                12_7   \n",
+       "17370     Sabah  Kota Kinabalu          12              7                12_7   \n",
+       "17690     Sabah  Kota Kinabalu          12              7                12_7   \n",
+       "...         ...            ...         ...            ...                 ...   \n",
+       "381944  Sarawak        Kuching          13              1                13_1   \n",
+       "381945  Sarawak        Kuching          13              1                13_1   \n",
+       "381946  Sarawak        Kuching          13              1                13_1   \n",
+       "382128  Sarawak        Kuching          13              1                13_1   \n",
+       "382129  Sarawak        Kuching          13              1                13_1   \n",
+       "\n",
+       "           parlimen_z  str_count  estimated_str   id  \\\n",
+       "17054   492728.552631      47255      44.078623  940   \n",
+       "17368   492728.552631      47255      18.715054  940   \n",
+       "17369   492728.552631      47255     101.697697  940   \n",
+       "17370   492728.552631      47255      26.953728  940   \n",
+       "17690   492728.552631      47255      20.820164  940   \n",
+       "...               ...        ...            ...  ...   \n",
+       "381944  140191.788817      16680       1.930045  911   \n",
+       "381945  140191.788817      16680       1.804070  911   \n",
+       "381946  140191.788817      16680       2.115991  911   \n",
+       "382128  140191.788817      16680       2.010005  911   \n",
+       "382129  140191.788817      16680       1.841132  911   \n",
+       "\n",
+       "                       clinic_name  \\\n",
+       "17054   MEDISINAR KLINIK & SURGERI   \n",
+       "17368   MEDISINAR KLINIK & SURGERI   \n",
+       "17369   MEDISINAR KLINIK & SURGERI   \n",
+       "17370   MEDISINAR KLINIK & SURGERI   \n",
+       "17690   MEDISINAR KLINIK & SURGERI   \n",
+       "...                            ...   \n",
+       "381944    17TH MILES FAMILY CLINIC   \n",
+       "381945    17TH MILES FAMILY CLINIC   \n",
+       "381946    17TH MILES FAMILY CLINIC   \n",
+       "382128    17TH MILES FAMILY CLINIC   \n",
+       "382129    17TH MILES FAMILY CLINIC   \n",
+       "\n",
+       "                                                  address  Latitude  \\\n",
+       "17054   LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...  6.094047   \n",
+       "17368   LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...  6.094047   \n",
+       "17369   LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...  6.094047   \n",
+       "17370   LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...  6.094047   \n",
+       "17690   LOT 34, GROUND FLOOR, BLOCK A-6, POLYTECHNIC C...  6.094047   \n",
+       "...                                                   ...       ...   \n",
+       "381944  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "381945  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "381946  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "382128  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "382129  GROUND FLOOR, LOT 1629 BLK 5 SSLD JALAN KUCHIN...  1.336466   \n",
+       "\n",
+       "         Longitude   distance  observed_distance  \n",
+       "17054   116.158303   5.116395         225.523666  \n",
+       "17368   116.158303   7.630956         142.813753  \n",
+       "17369   116.158303   5.188919         527.701119  \n",
+       "17370   116.158303   4.459260         120.193690  \n",
+       "17690   116.158303   7.325084         152.509445  \n",
+       "...            ...        ...                ...  \n",
+       "381944  110.407803  33.772913          65.183229  \n",
+       "381945  110.407803  33.335879          60.140271  \n",
+       "381946  110.407803  32.919120          69.656549  \n",
+       "382128  110.407803  34.587486          69.521023  \n",
+       "382129  110.407803  34.160873          62.894680  \n",
+       "\n",
+       "[8510 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_population.loc[:,\"observed_distance\"] = target_population.loc[:,\"distance\"] * target_population.loc[:,\"estimated_str\"]\n",
+    "target_population"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -28509,6 +28920,19 @@
    ],
    "source": [
     "px.histogram(target_population, x=\"distance\", nbins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygmt\n",
+    "\n",
+    "data = pygmt.datasets.load_sample_data(name=\"bathymetry\")\n",
+    "\n",
+    "data"
    ]
   }
  ],
