add parquet for gp_list

--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -28924,15 +28924,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1_257, 8)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>state</th><th>clinic_name</th><th>address</th><th>Latitude</th><th>Longitude</th><th>code_state_district</th><th>district</th></tr><tr><td>i64</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>1</td><td>&quot;W.P. Kuala Lumpur&quot;</td><td>&quot;QUALITAS HEALTH KLINIK NG DAN …</td><td>&quot;NO.25, GROUND FLOOR, JALAN MET…</td><td>3.2147435</td><td>101.64014</td><td>&quot;14_1&quot;</td><td>&quot;W.P. Kuala Lumpur&quot;</td></tr><tr><td>2</td><td>&quot;W.P. Kuala Lumpur&quot;</td><td>&quot;POLIKLINIK REN AI BUKIT MALURI&quot;</td><td>&quot;23, JALAN BURUNG TIUNG TAMAN B…</td><td>3.2010499</td><td>101.632171</td><td>&quot;14_1&quot;</td><td>&quot;W.P. Kuala Lumpur&quot;</td></tr><tr><td>3</td><td>&quot;W.P. Kuala Lumpur&quot;</td><td>&quot;CARECLINICS KLINIK KWAN&quot;</td><td>&quot;1-0-12, DIAMOND SQUARE, BLOK C…</td><td>3.1956351</td><td>101.704895</td><td>&quot;14_1&quot;</td><td>&quot;W.P. Kuala Lumpur&quot;</td></tr><tr><td>4</td><td>&quot;W.P. Kuala Lumpur&quot;</td><td>&quot;AKTIV CARE CLINIC&quot;</td><td>&quot;NO 50A, JALAN DESA BAKTI OFF J…</td><td>3.1029965</td><td>101.685198</td><td>&quot;14_1&quot;</td><td>&quot;W.P. Kuala Lumpur&quot;</td></tr><tr><td>5</td><td>&quot;W.P. Kuala Lumpur&quot;</td><td>&quot;KLINIK TANAH AIR&quot;</td><td>&quot;NO.1, TINGKAT BAWAH JALAN 19/7…</td><td>3.1615818</td><td>101.648715</td><td>&quot;14_1&quot;</td><td>&quot;W.P. Kuala Lumpur&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1253</td><td>&quot;Johor&quot;</td><td>&quot;KLINIK DR.ANIS&quot;</td><td>&quot;51(GF), 53(GF) , (TINGKAT BAWA…</td><td>1.5570161</td><td>103.712386</td><td>&quot;1_2&quot;</td><td>&quot;Johor Bahru&quot;</td></tr><tr><td>1254</td><td>&quot;Johor&quot;</td><td>&quot;KLINIK ANNU DAN SURGERI 24 JAM&quot;</td><td>&quot;185, JALAN PAHLAWAN SATU, TAMA…</td><td>1.520629</td><td>103.66223</td><td>&quot;1_2&quot;</td><td>&quot;Johor Bahru&quot;</td></tr><tr><td>1255</td><td>&quot;Johor&quot;</td><td>&quot;U.N.I KLINIK&quot;</td><td>&quot;NO. 97 (GROUND FLOOR), JALAN S…</td><td>1.454711</td><td>103.599425</td><td>&quot;1_2&quot;</td><td>&quot;Johor Bahru&quot;</td></tr><tr><td>1256</td><td>&quot;Johor&quot;</td><td>&quot;POLIKLINIK DR UMA&quot;</td><td>&quot;NO 27, (TINGKAT BAWAH), JALAN …</td><td>1.492267</td><td>103.640674</td><td>&quot;1_2&quot;</td><td>&quot;Johor Bahru&quot;</td></tr><tr><td>1257</td><td>&quot;Johor&quot;</td><td>&quot;POLIKLINIK SHEMA&quot;</td><td>&quot;21, TINGKAT BAWAH, JALAN RAMBA…</td><td>1.4847227</td><td>103.947698</td><td>&quot;1_2&quot;</td><td>&quot;Johor Bahru&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1_257, 8)\n",
+       "┌──────┬─────────────┬─────────────┬────────────┬───────────┬────────────┬────────────┬────────────┐\n",
+       "│ id   ┆ state       ┆ clinic_name ┆ address    ┆ Latitude  ┆ Longitude  ┆ code_state ┆ district   │\n",
+       "│ ---  ┆ ---         ┆ ---         ┆ ---        ┆ ---       ┆ ---        ┆ _district  ┆ ---        │\n",
+       "│ i64  ┆ str         ┆ str         ┆ str        ┆ f64       ┆ f64        ┆ ---        ┆ str        │\n",
+       "│      ┆             ┆             ┆            ┆           ┆            ┆ str        ┆            │\n",
+       "╞══════╪═════════════╪═════════════╪════════════╪═══════════╪════════════╪════════════╪════════════╡\n",
+       "│ 1    ┆ W.P. Kuala  ┆ QUALITAS    ┆ NO.25,     ┆ 3.2147435 ┆ 101.64014  ┆ 14_1       ┆ W.P. Kuala │\n",
+       "│      ┆ Lumpur      ┆ HEALTH      ┆ GROUND     ┆           ┆            ┆            ┆ Lumpur     │\n",
+       "│      ┆             ┆ KLINIK NG   ┆ FLOOR,     ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆ DAN …       ┆ JALAN MET… ┆           ┆            ┆            ┆            │\n",
+       "│ 2    ┆ W.P. Kuala  ┆ POLIKLINIK  ┆ 23, JALAN  ┆ 3.2010499 ┆ 101.632171 ┆ 14_1       ┆ W.P. Kuala │\n",
+       "│      ┆ Lumpur      ┆ REN AI      ┆ BURUNG     ┆           ┆            ┆            ┆ Lumpur     │\n",
+       "│      ┆             ┆ BUKIT       ┆ TIUNG      ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆ MALURI      ┆ TAMAN B…   ┆           ┆            ┆            ┆            │\n",
+       "│ 3    ┆ W.P. Kuala  ┆ CARECLINICS ┆ 1-0-12,    ┆ 3.1956351 ┆ 101.704895 ┆ 14_1       ┆ W.P. Kuala │\n",
+       "│      ┆ Lumpur      ┆ KLINIK KWAN ┆ DIAMOND    ┆           ┆            ┆            ┆ Lumpur     │\n",
+       "│      ┆             ┆             ┆ SQUARE,    ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ BLOK C…    ┆           ┆            ┆            ┆            │\n",
+       "│ 4    ┆ W.P. Kuala  ┆ AKTIV CARE  ┆ NO 50A,    ┆ 3.1029965 ┆ 101.685198 ┆ 14_1       ┆ W.P. Kuala │\n",
+       "│      ┆ Lumpur      ┆ CLINIC      ┆ JALAN DESA ┆           ┆            ┆            ┆ Lumpur     │\n",
+       "│      ┆             ┆             ┆ BAKTI OFF  ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ J…         ┆           ┆            ┆            ┆            │\n",
+       "│ 5    ┆ W.P. Kuala  ┆ KLINIK      ┆ NO.1,      ┆ 3.1615818 ┆ 101.648715 ┆ 14_1       ┆ W.P. Kuala │\n",
+       "│      ┆ Lumpur      ┆ TANAH AIR   ┆ TINGKAT    ┆           ┆            ┆            ┆ Lumpur     │\n",
+       "│      ┆             ┆             ┆ BAWAH      ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ JALAN      ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ 19/7…      ┆           ┆            ┆            ┆            │\n",
+       "│ …    ┆ …           ┆ …           ┆ …          ┆ …         ┆ …          ┆ …          ┆ …          │\n",
+       "│ 1253 ┆ Johor       ┆ KLINIK      ┆ 51(GF),    ┆ 1.5570161 ┆ 103.712386 ┆ 1_2        ┆ Johor      │\n",
+       "│      ┆             ┆ DR.ANIS     ┆ 53(GF) ,   ┆           ┆            ┆            ┆ Bahru      │\n",
+       "│      ┆             ┆             ┆ (TINGKAT   ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ BAWA…      ┆           ┆            ┆            ┆            │\n",
+       "│ 1254 ┆ Johor       ┆ KLINIK ANNU ┆ 185, JALAN ┆ 1.520629  ┆ 103.66223  ┆ 1_2        ┆ Johor      │\n",
+       "│      ┆             ┆ DAN SURGERI ┆ PAHLAWAN   ┆           ┆            ┆            ┆ Bahru      │\n",
+       "│      ┆             ┆ 24 JAM      ┆ SATU,      ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ TAMA…      ┆           ┆            ┆            ┆            │\n",
+       "│ 1255 ┆ Johor       ┆ U.N.I       ┆ NO. 97     ┆ 1.454711  ┆ 103.599425 ┆ 1_2        ┆ Johor      │\n",
+       "│      ┆             ┆ KLINIK      ┆ (GROUND    ┆           ┆            ┆            ┆ Bahru      │\n",
+       "│      ┆             ┆             ┆ FLOOR),    ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ JALAN S…   ┆           ┆            ┆            ┆            │\n",
+       "│ 1256 ┆ Johor       ┆ POLIKLINIK  ┆ NO 27,     ┆ 1.492267  ┆ 103.640674 ┆ 1_2        ┆ Johor      │\n",
+       "│      ┆             ┆ DR UMA      ┆ (TINGKAT   ┆           ┆            ┆            ┆ Bahru      │\n",
+       "│      ┆             ┆             ┆ BAWAH),    ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ JALAN …    ┆           ┆            ┆            ┆            │\n",
+       "│ 1257 ┆ Johor       ┆ POLIKLINIK  ┆ 21,        ┆ 1.4847227 ┆ 103.947698 ┆ 1_2        ┆ Johor      │\n",
+       "│      ┆             ┆ SHEMA       ┆ TINGKAT    ┆           ┆            ┆            ┆ Bahru      │\n",
+       "│      ┆             ┆             ┆ BAWAH,     ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ JALAN      ┆           ┆            ┆            ┆            │\n",
+       "│      ┆             ┆             ┆ RAMBA…     ┆           ┆            ┆            ┆            │\n",
+       "└──────┴─────────────┴─────────────┴────────────┴───────────┴────────────┴────────────┴────────────┘"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pygmt\n",
+    "import polars as pl\n",
     "\n",
-    "data = pygmt.datasets.load_sample_data(name=\"bathymetry\")\n",
-    "\n",
-    "data"
+    "pl.read_excel(\"data/information/gp_list.xlsx\").write_parquet(\"data/information/gp_list.parquet\", use_pyarrow=True)"
    ]
   }
  ],
