--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -800,23 +800,12 @@
    "outputs": [],
    "source": [
     "import plotly.figure_factory as ff\n",
-    "        \n",
-    "population_fig = ff.create_hexbin_mapbox(\n",
-    "            data_frame=target_population.loc[:,(\"lat\", \"lon\", \"estimated_str\")], \n",
-    "            lat=\"lat\", \n",
-    "            lon=\"lon\",\n",
-    "            color = \"estimated_str\",\n",
-    "            agg_func=np.sum,\n",
-    "            nx_hexagon=1000, \n",
-    "            opacity=0.5, \n",
-    "            min_count=1, \n",
-    "            show_original_data=False,\n",
-    "        )"
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -827,6 +816,7 @@
        },
        "data": [
         {
+         "below": "''",
          "lat": [
           3.2147435,
           3.2010499,
@@ -4609,7 +4599,6 @@
           "POLIKLINIK DR UMA",
           "POLIKLINIK SHEMA"
          ],
-         "textposition": "bottom right",
          "type": "scattermapbox"
         },
         {
@@ -134675,7 +134664,7 @@
           "2.029292568320083,0.10550717748077973"
          ],
          "marker": {
-          "opacity": 0.5
+          "opacity": 0.3
          },
          "name": "",
          "subplot": "mapbox",
@@ -137577,8 +137566,12 @@
        "layout": {
         "mapbox": {
          "accesstoken": "pk.eyJ1IjoibWFuZnllIiwiYSI6ImNrN2hvc3h1ejBjcWszZ25raXk0Z3VqaTkifQ.5PHi84GwoNUG5v-GMHZP1w",
+         "center": {
+          "lat": 4.389059008652357,
+          "lon": 108.65244272591418
+         },
          "style": "basic",
-         "zoom": 0.7
+         "zoom": 5
         },
         "showlegend": false,
         "template": {
@@ -138405,22 +138398,34 @@
     }
    ],
    "source": [
-    "fig = go.Figure(go.Scattermapbox(\n",
+    "population_fig = ff.create_hexbin_mapbox(\n",
+    "            data_frame=target_population.loc[:,(\"lat\", \"lon\", \"estimated_str\")], \n",
+    "            lat=\"lat\", \n",
+    "            lon=\"lon\",\n",
+    "            color = \"estimated_str\",\n",
+    "            agg_func=np.sum,\n",
+    "            nx_hexagon=1000, \n",
+    "            opacity=0.3, \n",
+    "            min_count=1, \n",
+    "            show_original_data=False,\n",
+    "        )\n",
+    "\n",
+    "gp_fig = go.Figure(go.Scattermapbox(below=\"''\",\n",
     "    mode = \"markers+text\",\n",
     "    lon = gp_df[\"Longitude\"], lat = gp_df[\"Latitude\"],\n",
     "    marker = {'size':10, 'symbol': \"marker\"},\n",
-    "    text = gp_df[\"clinic_name\"], textposition = \"bottom right\",\n",
+    "    text = gp_df[\"clinic_name\"],\n",
     "    ))\n",
     "\n",
-    "fig.add_trace(population_fig.data[0])\n",
+    "gp_fig.add_trace(population_fig.data[0])\n",
     "\n",
-    "fig.update_layout(\n",
+    "gp_fig.update_layout(\n",
     "    mapbox = {\n",
     "        'accesstoken': os.getenv(\"MAPBOX_TOKEN\"),\n",
-    "        'style': \"basic\", 'zoom': 0.7},\n",
+    "        'style': \"basic\", 'zoom': 5, \"center\":{\"lat\": 4.389059008652357, \"lon\": 108.65244272591418}},\n",
     "    showlegend = False,)\n",
     "\n",
-    "fig.show()"
+    "gp_fig.show()"
    ]
   },
   {
